bridge/base/0-abo-hommos-namespace.yaml
#! 0-abo-hommos-namespace.yaml
# Generated code, do not edit
apiVersion: v1
kind: Namespace
metadata:
    name: abo-hommos
    labels:
        com.docker.compose.project: abo-hommos
