bridge/base/app-service.yaml
# check if there is at least one published port

#! app-service.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: app-published
    namespace: abo-hommos
    labels:
        com.docker.compose.project: abo-hommos
        com.docker.compose.service: app
spec:
    selector:
        com.docker.compose.project: abo-hommos
        com.docker.compose.service: app
    ports:
        - name: app-3000
          port: 3000
          protocol: TCP
          targetPort: app-80
